--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -8,10 +8,10 @@ body {
 	@apply bg-black font-montserrat text-white;
 }
 
-h1 {
-	@apply font-marker;
-}
-
 #portal {
 	@apply pointer-events-none fixed top-0 left-0 z-30 min-h-screen min-w-full;
+}
+
+a:not(nav a) {
+	@apply underline decoration-primary;
 }
